This issue tracker has been migrated to GitHub, and is currently read-only.
For more information, see the GitHub FAQs in the Python's Developer Guide.

classification
Title: --with-valgrind broken
Type: Stage: resolved
Components: Build Versions: Python 3.10
process
Status: closed Resolution: fixed
Dependencies: Superseder:
Assigned To: Nosy List: skrah, vstinner
Priority: normal Keywords: patch

Created on 2020-06-05 22:38 by skrah, last changed 2022-04-11 14:59 by admin. This issue is now closed.

Pull Requests
URL Status Linked Edit
PR 20699 merged vstinner, 2020-06-07 23:20
Messages (4)
msg370793 - (view) Author: Stefan Krah (skrah) * (Python committer) Date: 2020-06-05 22:38
./configure --with-valgrind:

Objects/unicodeobject.c: In function ‘unicode_release_interned’:
Objects/unicodeobject.c:15672:26: error: lvalue required as left operand of assignment
             Py_REFCNT(s) += 1;
                          ^
Objects/unicodeobject.c:15678:26: error: lvalue required as left operand of assignment
             Py_REFCNT(s) += 2;



Well, Py_REFCNT(s) is no longer an lvalue. :-)
msg370927 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2020-06-07 23:33
Regression introduced by my commit fe2978b3b940fe2478335e3a2ca5ad22338cdf9c: bpo-39573. I wrote a PR 20699 to fix unicode_release_interned().
msg370930 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2020-06-07 23:39
New changeset c96a61e8163c2d25ed4ac77cf96201fd0bdb945c by Victor Stinner in branch 'master':
bpo-40881: Fix unicode_release_interned() (GH-20699)
https://github.com/python/cpython/commit/c96a61e8163c2d25ed4ac77cf96201fd0bdb945c
msg370931 - (view) Author: STINNER Victor (vstinner) * (Python committer) Date: 2020-06-07 23:40
Fixed. Thanks for the bug report Stefan!
History
Date User Action Args
2022-04-11 14:59:32adminsetgithub: 85058
2020-06-07 23:40:14vstinnersetstatus: open -> closed
versions: + Python 3.10
messages: + msg370931

components: + Build
resolution: fixed
stage: patch review -> resolved
2020-06-07 23:39:51vstinnersetmessages: + msg370930
2020-06-07 23:33:10vstinnersetmessages: + msg370927
2020-06-07 23:20:51vstinnersetkeywords: + patch
stage: patch review
pull_requests: + pull_request19914
2020-06-05 22:38:42skrahcreate